# barbershopify

./: .gitignore  CLAUDE.md  DESIGN.md  Makefile  README.md  SPEC.md  package-lock.json
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/barbershop/: demos.py  midi.py  musicxml.py  score.py  texture.py  vocabulary.py
backend/barbershop/analysis/: asr.py  beats.py  chords.py  decode.py  key.py  melody.py  pipeline.py
backend/barbershop/arranger/: arrange.py  config.py  harmonize.py  transpose.py  validate.py  voicing.py
backend/barbershop/composer/: affect.py  compose.py  melodygen.py  prosody.py
backend/barbershop/textset/: align.py  phrases.py  syllabify.py
backend/tests/: test_analysis.py  test_api.py  test_arrange.py  test_asr.py  test_composer.py  test_embellish.py  test_harmonize.py  test_midi.py  test_musicxml.py  test_score.py  test_syllabify.py  test_textset.py  test_texture.py  test_transpose.py  test_validate.py  test_vocabulary.py  test_voicing.py
docs/superpowers/plans/: 2026-06-10-barbershopify-plan.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  ScoreView.tsx  TransportBar.tsx  api.ts  store.ts  styles.css  types.ts
frontend/src/playback/: engine.ts  freq.test.ts  freq.ts
test_songs/: SOURCES.md
