[project]
name = "barbershopify-backend"
version = "0.1.0"
description = "Barbershop quartet arrangement engine and web API"
requires-python = ">=3.12"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "barbershop", "barbershop.arranger"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
